# GiorgiLauritto_2C_2024

firmware/: EProgramable_C6.code-workspace
firmware/drivers/: CMakeLists.txt
firmware/drivers/devices/inc/maxm86161/: MAXM86161.h  MAXM86161_I2C.h  app.h  hrm_helper.h  maxm86161_hrm_config.h  maxm86161_hrm_spo2.h
firmware/drivers/devices/src/maxm86161/: MAXM86161.c  MAXM86161_I2C.c  app.c  hrm_helper.c  maxm86161_hrm_spo2.c
firmware/examples/ProyectoFinalIrina/: CMakeLists.txt  sdkconfig
firmware/examples/ProyectoFinalIrina/main/: CMakeLists.txt  ProyectoFinalIrina.c
firmware/examples/ProyectoFinalJose/: CMakeLists.txt  README.md  sdkconfig
firmware/examples/ProyectoFinalJose/main/: CMakeLists.txt  ProyectoFinalJose.c
firmware/examples/ej_maxm86161/: CMakeLists.txt
firmware/examples/ej_maxm86161/main/: CMakeLists.txt  ej_maxm86161.c
